src/objects/Form_Label__mdt.object
<CustomObject>
    <fields>
        <fullName>Custom_Label__c</fullName>
        <label>Custom Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>